[package]
name = "rustchain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustchain"
path = "src/lib.rs"

[[bin]]
name =  "rustchain"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
crypto-hash = "0.3.4"
